# N-Body-Simulation

./: .gitignore  Doxyfile  Gantt chart-Nbody Sim.xlsx  README.md  Task Board  build.txt
Windows/data/: data.cpp  datacreator.cpp
builds/: buiild_win.txt  build.txt  build_win.txt  data_win_compile.txt
docs/: Gantt chart-Nbody Sim.xlsx  N-body-sim_prez.pptx  Project Schedule.docx  ReadMe.txt  Risk table.xlsx  SAD-N-Body.docx  SRS-N-body.docx  ~$S-N-body.docx
for_clean_sys/data/: two_body_test.h5
profilers_results/100k_bodies_CPU_profilers/: MasterCollectionFlag.infoamplxe  r001hs.vtune
profilers_results/100k_bodies_CPU_profilers/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
profilers_results/100k_bodies_CPU_profilers/data.0/: 14996-32368.0-24768.0.th  14996-32368.0-24928.0.th  14996-32368.0-25592.0.th  14996-32368.0-29644.0.th  14996-32368.0-29644.0.th.aux  14996-32368.0-30136.0.th  14996-32368.0-34216.0.th  14996-32368.0-34216.0.th.aux  14996-32368.0-35816.0.th  14996-32368.0-36288.0.th  14996-32368.0-36288.0.th.aux  14996-32368.0-9996.0.th  14996-32368.0.trace  systemcollector-3956-DESKTOP-G1MRM99.sc
profilers_results/100k_bodies_CPU_profilers/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
profilers_results/100k_bodies_CPU_profilers/sqlite-db/_cache_grouper_data4_dd_thread/grouper/: 0
profilers_results/100k_bodies_CPU_profilers/sqlite-db/_cache_grouper_data4_global_data_grouper/grouper/: 0
profilers_results/100k_bodies_CPU_profilers/sqlite-db/_cache_grouper_data4_global_time_interval_metrics/grouper/: 0
profilers_results/100k_bodies_CPU_profilers/sqlite-db/timelinedb/: directory.xml
profilers_results/3_bodies_CPU_FLOPS/: 3_bodies_CPU_FLOPS.advixeproj  annotations.advidb2
profilers_results/3_bodies_CPU_FLOPS/e000/: callstacks.def  e000.advixeexp  loop_hashes.def  roofline.data  settings.xml
profilers_results/3_bodies_CPU_FLOPS/e000/hs000/: hs000.advixe  issues.xml  metrics.advisum  recommendations.advisum  threading.advisum  vectorization.advisum
profilers_results/3_bodies_CPU_FLOPS/e000/hs000/config/: collection.cfg  context_values.cfg  runss.options
profilers_results/3_bodies_CPU_FLOPS/e000/hs000/data.0/: 29400-3592.0-12544.0.th  29400-3592.0-23104.0.th  29400-3592.0-26060.0.th  29400-3592.0-26060.0.th.aux  29400-3592.0-28748.0.th  29400-3592.0-28748.0.th.aux  29400-3592.0-29128.0.th  29400-3592.0-29800.0.th  29400-3592.0-29800.0.th.aux  29400-3592.0-34280.0.th  29400-3592.0-36652.0.th  29400-3592.0.trace  systemcollector-35404-DESKTOP-G1MRM99.sc
profilers_results/3_bodies_CPU_FLOPS/e000/trc000/: trc000.advixe
profilers_results/3_bodies_CPU_FLOPS/e000/trc000/config/: collection.cfg  context_values.cfg  runtrc.options
profilers_results/3_bodies_CPU_FLOPS/e000/trc000/data.0/: advixe-runtrc.txt  (+2 more)
profilers_results/3_bodies_CPU_profilers/: r000hs.vtune
profilers_results/3_bodies_CPU_profilers/config/: context_values.cfg  log.cfg  runss.options  state.cfg
profilers_results/3_bodies_CPU_profilers/data.0/: 17388-36672.0-20292.0.th  17388-36672.0-20292.0.th.aux  17388-36672.0-24720.0.th  17388-36672.0-25800.0.th  17388-36672.0-29268.0.th  17388-36672.0-29268.0.th.aux  17388-36672.0-31964.0.th  17388-36672.0-34224.0.th  17388-36672.0-35700.0.th  17388-36672.0-35700.0.th.aux  17388-36672.0-39192.0.th  17388-36672.0.trace  systemcollector-26720-DESKTOP-G1MRM99.sc
profilers_results/3_bodies_CPU_profilers/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
profilers_results/3_bodies_CPU_profilers/sqlite-db/timelinedb/: directory.xml
profilers_results/50k_bodies_CPU/: my_roofline.advixeproj
profilers_results/50k_bodies_CPU/e000/: callstacks.def  e000.advixeexp  loop_hashes.def  roofline.data
profilers_results/50k_bodies_CPU/e000/hs000/: annotations.advias2  hs000.advixe  issues.xml  metrics.advisum  recommendations.advisum  threading.advisum  vectorization.advisum
profilers_results/50k_bodies_CPU/e000/trc000/: trc000.advixe
project/: CMakeLists.txt  Makefile  callgrind.out.1681  replay.cpp
project/algo/: barnes_hut.cpp  barnes_hut_cuda.cu  brut_force.cpp  whfast.cpp
project/data/: eight.txt  three_body_common_mass.h5  three_body_hierarchical.h5
project/gui/: .gitignore_fragment.txt  launch.sh  launch_win.bat  main.py  requirements.txt  setup_venv.sh  setup_venv_win.bat
project/gui/modules/: __init__.py  baker.py  config.py  discovery.py  replay.py  settings.py
project/include/: barnes_hut.hpp  barnes_hut_cuda.cuh  bodysystem.hpp  brut_force.hpp  camera.hpp  control.hpp  data.hpp  generators.hpp  graphic_state.hpp  object.hpp  physics.hpp  renderer.hpp  state.hpp  whfast.hpp  windowHandler.hpp
project/src/: barnes_hut.cpp  barnes_hut_cuda.cu  bodysystem.cpp  control.cpp  data.cpp  datacreator.cpp  generators.cpp  main.cpp  object.cpp  physics.cpp  renderer.cpp  replay.cpp  windowHandler.cpp
project/tests/: README.md  test_alg.cpp  test_io.cpp  test_phy.cpp
project/tests/gui/: conftest.py  requirements.txt  test_baker.py  test_config.py
project/verifications_tools/: generate_globular_cluster.py  generate_solar_nasa_cli.py  nasa_api.py  rebound_sim.py  run_rebound_reference.py  verify_io.py
src/: barnes_hut.cpp  barnes_hut.hpp  bodysystem.cpp  bodysystem.hpp  build.txt  control.cpp  control.hpp  data.cpp  data.hpp  main.cpp  nBodySim  object.cpp  object.hpp  renderer.cpp  renderer.hpp  renderer_cubes.cpp  renderer_points_single.cpp  replay.cpp
src/code/: barnes_hut.cpp  bodysystem.cpp  control.cpp  main.cpp  object.cpp  renderer.cpp
src/data/: data.cpp  data.hpp  solar_system.h5
src/include/: bodysystem.hpp  constants.hpp  control.hpp  object.hpp  renderer.hpp
verifications_tools/: README_VERIFICATION.md  auto_verify.py  benchmark.py  compare.py  compare_snapshots.py  generate_large_system.py  generators.py  rebound_sim.py  run_cpp_simulation.py  run_rebound_reference.py  sim.py  snapshot.py  system_past.txt  verification_plots.py  verify.py  verify_io.py
win-src/data/: 1bodies.h5  3bodies.h5  datacreator.cpp  solar_system_intruder.h5  three_body_one_escape.h5
(+40 files in other folders)
